--- a/app/views/home/_bar_chart.html.erb
+++ b/app/views/home/_bar_chart.html.erb
@@ -2,6 +2,8 @@
 <%# one row has a height of 40px %>
 <% row_height = 40 %>
 <% total_grid_height = rows_count * row_height %>
+<% titles = ["0-10", "11-20", "21-30", "31-40"] if local_assigns[:titles].blank? %>
+<% values = Array.new(4,0) if local_assigns[:values].blank? %>
 
 <% if local_assigns[:title] %>
   <div class="row apt-title text-center">
@@ -27,7 +29,7 @@
             <div class="apt-bar" style="height: <%= current_col_height %>px;"></div>
           </div>
           <div class="apt-x-axis text-center font-xxlarge">
-            <%= "#{10 * index + (index/100.0).ceil} - #{10 * (index + 1)}" %>
+            <%= titles[index] %>
           </div>
         </div>
       <% end %>
