#24 :: implemented filters for classroom types and classrooms

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -114,176 +114,14 @@
   </div>
 </div>
 
-<!-------------
-<div class="container kmSection">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <ul class="nav nav-pills simple bordered nav-justified font-xlarge">
-        <li role="presentation" class="active"><a href="#kindergarten" data-toggle="pill">Kindergarten</a></li>
-        <li role="presentation"><a href="#first_grade" data-toggle="pill">First Grade</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="row kmSection text-center">
-    <div class="dropdown simple">
-      <a href="javascript:;" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        <span>Classroom 1</span>
-        <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu dropdown-menu-right">
-        <li><a href="#">Classroom 2</a></li>
-        <li><a href="#">Classroom 3</a></li>
-      </ul>
-    </div>
-  </div>
+<div id="bottomDashboard">
+  <%= render 'bottom_dashboard' %>
 </div>
 
-<div class="container kmSection">
-  <div class="tab-content">
-    <div class="tab-pane active" id="kindergarten" role="tabpanel">
-
-      <div class="row kmSection">
-        <ul class="nav nav-pills simple nav-justified nowrap">
-          <li role="presentation" class="active"><a href="#kg_count_card_20" data-toggle="pill">Counting and Cardianlity to 20</a></li>
-          <li role="presentation"><a href="#kg_base_10" data-toggle="pill">Base 10</a></li>
-          <li role="presentation"><a href="#kg_number_line_model" data-toggle="pill">Number line model</a></li>
-          <li role="presentation"><a href="#kg_count_all" data-toggle="pill">Addition and Subtraction: Count All</a></li>
-        </ul>
-      </div>
-
-      <div class="tab-content">
-        <div class="tab-pane active" id="kg_count_card_20" role="tabpanel">
-          <%= render 'bar_chart', values: [15, 40, 10, 80], rows_count: 10 %>
-        </div>
-
-        <div class="tab-pane" id="kg_base_10" role="tabpanel">
-          <div class="row">
-            <div class="col-md-6">
-              <%= render 'bar_chart', title: 'Count', values: [75, 25], rows_count: 10 %>
-            </div>
-            <div class="col-md-6">
-              <%= render 'bar_chart', title: 'Produce', values: [33, 66], rows_count: 10 %>
-            </div>
-          </div>
-        </div>
-
-        <div class="tab-pane" id="kg_number_line_model" role="tabpanel">
-          <%= render 'bar_chart', values: [15, 40, 10, 80], rows_count: 10 %>
-        </div>
-
-        <div class="tab-pane" id="kg_count_all" role="tabpanel">
-          <%= render 'bar_chart', values: [20, 10, 15, 55], rows_count: 10 %>
-        </div>
-
-      </div>
-
-    </div>
-
-    <div class="tab-pane" id="first_grade" role="tabpanel">
-
-      <div class="row kmSection">
-        <ul class="nav nav-pills simple nav-justified nowrap">
-          <li role="presentation" class="active"><a href="#g1_count_card_20" data-toggle="pill">Counting and Cardianlity to 20</a></li>
-          <li role="presentation"><a href="#g1_base_10" data-toggle="pill">Base 10</a></li>
-          <li role="presentation"><a href="#g1_number_line_model" data-toggle="pill">Number line model</a></li>
-          <li role="presentation"><a href="#g1_count_all" data-toggle="pill">Count All</a></li>
-          <li role="presentation"><a href="#g1_count_on" data-toggle="pill">Count On</a></li>
-          <li role="presentation"><a href="#g1_compare" data-toggle="pill">Compare</a></li>
-        </ul>
-      </div>
-
-      <div class="tab-content">
-        <div class="tab-pane active" id="g1_count_card_20" role="tabpanel">
-          <%= render 'bar_chart', values: [20, 10, 15, 55] %>
-        </div>
-
-        <div class="tab-pane" id="g1_base_10" role="tabpanel">
-          <div class="row">
-            <div class="col-md-6">
-              <%= render 'bar_chart', title: 'Count', values: [25, 75] %>
-            </div>
-            <div class="col-md-6">
-              <%= render 'bar_chart', title: 'Produce', values: [33, 66] %>
-            </div>
-          </div>
-        </div>
-
-        <div class="tab-pane" id="g1_number_line_model" role="tabpanel">
-          <%= render 'bar_chart', values: [20, 10, 15, 55] %>
-        </div>
-
-        <div class="tab-pane" id="g1_count_all" role="tabpanel">
-          <%= render 'bar_chart', values: [75, 100, 20, 50] %>
-        </div>
-
-        <div class="tab-pane" id="g1_count_on" role="tabpanel">
-          <%= render 'bar_chart', values: [80, 60, 45, 15] %>
-        </div>
-
-        <div class="tab-pane" id="g1_compare" role="tabpanel">
-          <%= render 'bar_chart', values: [30, 35, 75, 10] %>
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-</div>
-
----->
-<!---------------------------------------------->
-
-<div class="container kmSection">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <ul class="nav nav-pills simple bordered nav-justified font-xlarge">
-        <% @total_hash.keys.each_with_index do |ct_name, index| %>
-          <li role="presentation" class="<%= index == 0 ? 'active' : '' %>"><a href="#<%= ct_name.downcase.tr(' ', '_') %>" data-toggle="pill"><%= ct_name%></a></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-
-  <div class="row kmSection text-center">
-    <div class="dropdown simple">
-      <a href="javascript:;" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        <span>Classroom 1</span>
-        <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu dropdown-menu-right">
-        <li><a href="#">Classroom 2</a></li>
-        <li><a href="#">Classroom 3</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<div class="container kmSection">
-  <div class="tab-content">
-    <% @total_hash.each do |ct_name, ct_item| %>
-      <div class="tab-pane <%= ct_name.downcase.start_with?('kinder') ? 'active' : '' %>" id="<%= ct_name.downcase.tr(' ', '_') %>" role="tabpanel">
-        <% ct_item[:classrooms].each do |cr_id, cr_item| %>
-          <div class="kmClassroomSection" id="classroom<%= cr_id %>">
-            <div class="row kmSection">
-              <ul class="nav nav-pills simple nav-justified nowrap">
-                <% cr_item[:bubble_groups].keys.each_with_index do |bg_name, index| %>
-                  <li role="presentation" class="<%= index == 0 ? 'active' : '' %>"><a href="#<%= 'classroom' + cr_id.to_s + '_' + bg_name.downcase.tr(' ', '_') %>" data-toggle="pill"><%= bg_name %></a></li>
-                <% end %>
-              </ul>
-            </div>
-
-            <div class="tab-content">
-              <% cr_item[:bubble_groups].keys.each_with_index do |bg_name, index| %>
-                <div class="tab-pane <%= index == 0 ? 'active' : '' %>" id="<%= 'classroom' + cr_id.to_s + '_' + bg_name.downcase.tr(' ', '_') %>" role="tabpanel">
-                  <%= render 'bar_chart', values: cr_item[:bubble_groups][bg_name][:categories].values.map{|info| info[:passed]}, titles:  cr_item[:bubble_groups][bg_name][:categories].keys %>
-                </div>
-              <% end %>
-            </div>
-
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-</div>
+<script>
+  $(document).ready(function(){
+    $('#classroomTypeTab li a').click(function(){
+      $('.row.kmSection.classRooms').toggleClass('hidden');
+    });
+  });
+</script>
