--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -1,39 +1,10 @@
-<div class="container-fluid kmSection">
-  <div class="row content-tabs">
-    <div class="container">
-      <ul class="nav nav-tabs nav-justified">
-        <li role="presentation">
-          <%= link_to dashboard_path do%>
-            Dashboard
-            <span class="caret"></span>
-          <% end %>
-        </li>
-        <li role="presentation" class="active">
-          <%= link_to '#classroom', data: {toggle: 'tab'} do%>
-            Classroom
-            <span class="caret"></span>
-          <% end %>
-        </li>
-        <li role="presentation">
-          <%= link_to '#activities', data: {toggle: 'tab'} do%>
-            Activities
-          <% end %>
-        </li>
-        <li role="presentation">
-          <%= link_to '#teacher_mode', data: {toggle: 'tab'} do%>
-            Teacher Mode
-          <% end %>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
+<%= render 'shared/menu' %>
 
 <div class="container-fluid kmSection">
   <div class="row kmSectionTitle">
     <div class="container">
       <div class="pull-left">
-        <h4>Activities</h4>
+        <h4>Classrooms</h4>
       </div>
     </div>
   </div>
