--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,32 +1,4 @@
-<div class="container-fluid kmSection">
-  <div class="row content-tabs">
-    <div class="container">
-      <ul class="nav nav-tabs nav-justified">
-        <li role="presentation" class="active">
-          <%= link_to '#dashboard', data: {toggle: 'tab'} do%>
-            Dashboard
-            <span class="caret"></span>
-          <% end %>
-        </li>
-        <li role="presentation">
-          <%= link_to classrooms_path do%>
-            Classroom
-          <% end %>
-        </li>
-        <li role="presentation">
-          <%= link_to activities_path do%>
-            Activities
-          <% end %>
-        </li>
-        <li role="presentation">
-          <%= link_to '#teacher_mode', data: {toggle: 'tab'} do%>
-            Teacher Mode
-          <% end %>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
+<%= render 'shared/menu' %>
 
 <div class="container-fluid kmSection">
   <div class="row kmSectionTitle">
