#29 :: Admin Crud Panel

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -106,3 +106,5 @@ table.table {width:100%;
   $padding: 10px;
   &.grid-pad > .grid-row > .grid-col {padding: $padding;}
 }
+
+.btn.submenu{ margin:20px; width: 240px; padding: 8px 0;}
