--- a/app/views/home/teacher_mode.html.erb
+++ b/app/views/home/teacher_mode.html.erb
@@ -1,1 +1,40 @@
 <%= render 'shared/menu' %>
+
+<% games = {
+            'Counting and Cardinality to 20' => 'http://emotionrays.com/_demo/',
+            'Base 10 representations' => 'http://emotionrays.com/_demo/',
+            'Number line model' => 'http://emotionrays.com/_demo/',
+            'Addition and subtraction' => 'http://emotionrays.com/_demo/'
+           }
+%>
+
+<div class="iFrameGames">
+  <% games.each do |game, url| %>
+    <% css_class = game != 'Addition and subtraction' ? 'inactive' : '' %>
+    <%= link_to game, url, class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
+    <br>
+  <% end %>
+</div>
+<div class="iframe">
+  <iframe name="ifrm" id="game_ifrm" src="http://emotionrays.com/_demo/" frameborder="0">
+    Your browser doesn't support iframes.
+  </iframe>
+</div>
+
+<script>
+  $(document).ready(function(){
+    $('.gameBtn').click(function(){
+      $('.gameBtn').addClass('inactive');
+      $(this).removeClass('inactive');
+      return loadIframe('game_ifrm', $(this).attr('href'));
+    });
+  });
+  function loadIframe(iframeName, url) {
+    var $iframe = $('#' + iframeName);
+    if ( $iframe.length ) {
+      $iframe.attr('src',url);
+      return false;
+    }
+    return true;
+  }
+</script>
