--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@ body {font-family: "Myriad Pro", sans-serif; color:#808080;}
 i {vertical-align:middle;}
 .nowrap {white-space:nowrap;}
 a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
+.font-small {font-size:12px;}
 .font-normal {font-size:14px;}
 .font-large {font-size:16px;}
 .font-xlarge {font-size:18px;}
