--- a/app/views/kids/reports.html.erb
+++ b/app/views/kids/reports.html.erb
@@ -1,3 +1,108 @@
+<div class="container-fluid kmSection">
+  <div class="row content-tabs">
+    <div class="container">
+      <ul class="nav nav-tabs nav-justified">
+        <li role="presentation" class="active">
+          <%= link_to '#dashboard', data: {toggle: 'tab'} do%>
+            Dashboard
+            <span class="caret"></span>
+          <% end %>
+        </li>
+        <li role="presentation">
+          <%= link_to classrooms_path do%>
+            Classroom
+          <% end %>
+        </li>
+        <li role="presentation">
+          <%= link_to activities_path do%>
+            Activities
+          <% end %>
+        </li>
+        <li role="presentation">
+          <%= link_to '#teacher_mode', data: {toggle: 'tab'} do%>
+            Teacher Mode
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid kmSection">
+  <div class="row kmSectionTitle">
+    <div class="container">
+      <div class="pull-left">
+        <h4>Reports for Danielle Way</h4>
+      </div>
+      <div class="pull-right">
+        <%= link_to 'javascript:', class: 'btn btn-info btn-large btn-simple' do %>
+          <i class="fa fa-print"></i>
+          <span> Print Report as PDF</span>
+        <% end %>
+        <%= link_to 'Back to Classroom','javascript:', class: 'btn btn-warning btn-large btn-simple' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container kmSection">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="kmSection">
+
+        <h4>Information</h4>
+        <div class="grid grid-pad">
+          <div class="grid-row">
+            <div class="grid-col">
+              <div class="media">
+                <div class="media-left">
+                  <%= image_tag 'student_avatar_medium.jpg', class: 'media-object' %>
+                </div>
+                <div class="media-body media-middle">
+                  <h3 class="text-main">Danielle Way</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid-row">
+            <div class="grid-col">
+              <table class="table solid fit continual font-large">
+                <tbody>
+                <% data = {'Age' => '6 years', 'Language' => 'English', 'School' => 'East High School', 'Classroom' => 'Smart', 'Classroom Type' => 'First Grade'} %>
+                <% data.each do |k, v| %>
+                  <tr>
+                    <td>
+                      <span><%= k %></span>
+                    </td>
+                    <td class="text-right">
+                      <span class="text-main"><%= v %></span>
+                    </td>
+                  </tr>
+                <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="col-md-8">
+      <% report_titles = ['Addition and Subtraction Count All', 'Base 10 How Many', 'Base 10 Produce', 'Counting and Cardinality to 20', 'Number Line Model', 'Addition and Subtraction Comparison', 'Addition and Subtraction Count On'] %>
+      <% report_titles.each do |title| %>
+        <div class="kmSection">
+          <h4><%= title %></h4>
+          <%= render 'home/mixed_bar_chart' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<!--
 <h2>Reports for <%= link_to @kid.full_name, @kid %></h2>
 
 <table>
@@ -20,3 +125,4 @@
 
 <%= link_to 'Back', @kid %>
 
+-->
