--- a/app/views/home/teacher_mode.html.erb
+++ b/app/views/home/teacher_mode.html.erb
@@ -1,17 +1,9 @@
 <%= render 'shared/menu' %>
 
-<% games = {
-            'Counting and Cardinality to 20' => 'http://emotionrays.com/_demo/',
-            'Base 10 representations' => 'http://emotionrays.com/_demo/',
-            'Number line model' => 'http://emotionrays.com/_demo/',
-            'Addition and subtraction' => 'http://emotionrays.com/_demo/'
-           }
-%>
-
 <div class="iFrameGames">
-  <% games.each do |game, url| %>
-    <% css_class = game != 'Addition and subtraction' ? 'inactive' : '' %>
-    <%= link_to game, url, class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
+  <% BubbleGroup.pluck(:name).each_with_index do |game, index| %>
+    <% css_class = index > 0 ? 'inactive' : '' %>
+    <%= link_to game, 'http://emotionrays.com/_demo/', class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
     <br>
   <% end %>
 </div>
