--- a/app/views/home/dashboard_classroom.html.erb
+++ b/app/views/home/dashboard_classroom.html.erb
@@ -125,11 +125,11 @@
           </td>
           <% if kid.kindergarten? %>
             <td>
-              <%= link_to 'Kindergarten Report', 'javascript:', class: 'btn btn-info btn-simple btn-wide' %>
+              <%= link_to 'Kindergarten Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
             </td>
 
             <td>
-              <%= link_to 'Full Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
+              <%= link_to 'Full Report', reports_kid_path(kid, full_report: true), class: 'btn btn-info btn-simple btn-wide' %>
             </td>
           <% else %>
             <td>
