--- a/app/views/kids/reports.html.erb
+++ b/app/views/kids/reports.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/menu' %>
+<%= render 'shared/menu' unless current_user.parent? %>
 <div class="container-fluid kmSection">
   <div class="row kmSectionTitle">
     <div class="container">
