--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -28,6 +28,7 @@
 .btn-extended {padding-left:20px; padding-right:20px;}
 .btn-wide {min-width:150px;}
 .btn-warning {background:$color-brand;}
+.btn-warning-brand {background:$color-brand-fade;}
 .btn-info {background:$color-info;}
 .btn-success {background:$color-success;}
 .btn-danger {background:$color-brand-fade;}
