--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -38,6 +38,9 @@ $icon-height: 20px; //font-awesome default icon height
       > .action-media {right:$action-offset;}
       > .action-body {padding-right:$action-width; padding-left:$action-offset;}
     }
+    &.action-center {
+      > .action-media {left:50%; margin-left: -$action-width / 2;}
+    }
     &.warning {background:$color-brand;
       &:hover {background:$color-brand-em;}
     }
@@ -113,3 +116,7 @@ table.table {width:100%;
 .iFrameGames .btn.btn-simple.btn-warning.inactive{background-color:#ffffff; border-width: 2px; border-color: #a3a3a3; color: #a3a3a3;}
 .iframe{margin-left: 300px; display: inline-block; margin-top: 50px;}
 #game_ifrm{width: 850px; height: 850px;}
+
+.row.actions {
+  .btn-simple + .btn-simple {margin-left:15px;}
+}
