--- a/app/views/home/dashboard_classroom.html.erb
+++ b/app/views/home/dashboard_classroom.html.erb
@@ -86,13 +86,14 @@
         </td>
 
         <td class="equal"></td>
-
-        <td>
-          <%= link_to new_kid_path, class: 'btn btn-info btn-simple btn-large btn-wide' do %>
-            <i class="fa fa-plus"></i>
-            <span>Add New Student</span>
-          <% end %>
-        </td>
+        <% if can? :create, Kid %>
+          <td>
+            <%= link_to new_kid_path, class: 'btn btn-info btn-simple btn-large btn-wide' do %>
+              <i class="fa fa-plus"></i>
+              <span>Add New Student</span>
+            <% end %>
+          </td>
+        <% end %>
       </tr>
       </tbody>
     </table>
@@ -123,27 +124,31 @@
           <td>
             <span class="text-main font-large"><%= kid.full_name %></span>
           </td>
-          <% if kid.kindergarten? %>
-            <td>
-              <%= link_to 'Kindergarten Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
-            </td>
+          <% if can? :reports, kid %>
+            <% if kid.kindergarten? %>
+              <td>
+                <%= link_to 'Kindergarten Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
+              </td>
 
-            <td>
-              <%= link_to 'Full Report', reports_kid_path(kid, full_report: true), class: 'btn btn-info btn-simple btn-wide' %>
-            </td>
-          <% else %>
-            <td>
-              <%= link_to 'First Grade Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
+              <td>
+                <%= link_to 'Full Report', reports_kid_path(kid, full_report: true), class: 'btn btn-info btn-simple btn-wide' %>
+              </td>
+            <% else %>
+              <td>
+                <%= link_to 'First Grade Report', reports_kid_path(kid), class: 'btn btn-info btn-simple btn-wide' %>
+              </td>
+            <% end %>
+          <% end %>
+          <% if can? :edit, kid %>
+            <td class="minimal">
+              <%= link_to 'Edit', edit_kid_path(kid), class: 'btn btn-warning btn-simple btn-extended' %>
             </td>
           <% end %>
-
-          <td class="minimal">
-            <%= link_to 'Edit', edit_kid_path(kid), class: 'btn btn-warning btn-simple btn-extended' %>
-          </td>
-
-          <td class="minimal">
-            <%= link_to 'Delete', kid, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-extended' %>
-          </td>
+          <% if can? :destroy, kid %>
+            <td class="minimal">
+              <%= link_to 'Delete', kid, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-extended' %>
+            </td>
+          <% end %>
 
         </tr>
       <% end %>
