--- a/app/views/home/activities.html.erb
+++ b/app/views/home/activities.html.erb
@@ -62,15 +62,15 @@
             </td>
             <td></td>
             <td>
-              <div class="dropdown simple medium select">
+              <div class="dropdown simple medium select timeLimit">
                 <a href="javascript:" class="dropdown-toggle nowrap" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                   <span class="value">2 hours</span>
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right">
-                  <li><a href="javascript:">1 Day</a></li>
-                  <li><a href="javascript:">2 Days</a></li>
-                  <li><a href="javascript:">5 Days</a></li>
+                  <% @time_options.each do |to| %>
+                    <li><a href="javascript:" data-time-limit="<%= to[1] %>"><%= to[0] %></a></li>
+                  <% end %>
                 </ul>
                 <%= hidden_field_tag :classroom_type, @current_classroom_type.id %>
               </div>
@@ -103,42 +103,10 @@
           <% bg = info[:bubble_group] %>
           <% assignment = info[:global_assignment] %>
           <td>
-            <%= render 'assignments/form', assignment: assignment, kid: nil, bg:bg %>
+            <%= render 'assignments/new_form', assignment: assignment, kid: nil, bg:bg %>
           </td>
         <% end %>
 
-      </tr>
-      <tr>
-        <td class="text-center">
-          <span class="text-main font-large"><%= @current_classroom_type.type_name %><br><%= @current_classroom.name %></span>
-        </td>
-        <% @total_assignments_hash.each do |bg_id, info| %>
-          <td>
-            <div class="btn-multi center-block">
-              <%= link_to 'javascript:', class: 'info action action-center' do %>
-                <div class="action-media">
-                  <i class="fa fa-pause"></i>
-                </div>
-              <% end %>
-            </div>
-          </td>
-        <% end %>
-      </tr>
-      <tr>
-        <td class="text-center">
-          <span class="text-main font-large"><%= @current_classroom_type.type_name %><br><%= @current_classroom.name %></span>
-        </td>
-        <% @total_assignments_hash.each do |bg_id, info| %>
-          <td>
-            <div class="btn-multi center-block">
-              <%= link_to 'javascript:', class: 'warning action action-center' do %>
-                <div class="action-media">
-                  <i class="fa fa-play"></i>
-                </div>
-              <% end %>
-            </div>
-          </td>
-        <% end %>
       </tr>
       </tbody>
 
@@ -159,10 +127,9 @@
               <% next unless @current_classroom_type.bubble_groups.include? bg %>
               <% assignment = @total_assignments_hash[bg.id][:kid_assignments][kid.id] %>
                 <td>
-                  <%= render 'assignments/form', assignment: assignment, kid: kid, bg:bg %>
+                  <%= render 'assignments/new_form', assignment: assignment, kid: kid, bg:bg %>
                 </td>
             <% end %>
-
           </tr>
         <% end %>
       </tbody>
@@ -171,9 +138,16 @@
   </div>
 
   <div class="row actions text-right">
-    <%= link_to 'Submit', 'javascript:', class: 'btn btn-success btn-simple btn-large btn-wide' %>
-    <%= link_to 'Reset', 'javascript:', class: 'btn btn-warning btn-warning-brand btn-simple btn-large btn-wide' %>
-    <%= link_to 'Pause', 'javascript:', class: 'btn btn-info btn-simple btn-large btn-wide' %>
+    <% if @current_classroom.assignments.none_status.any? || @current_classroom.assignments.empty? %>
+      <%= form_tag bulk_submit_assignments_path, id: 'bulk_submit' do %>
+        <%= hidden_field_tag :classroom, @current_classroom.id %>
+        <%= hidden_field_tag :time_limit, 2.hours %>
+        <%= submit_tag 'Submit', class: 'btn btn-success btn-simple btn-large btn-wide' %>
+      <% end %>
+    <% else %>
+      <%= link_to 'Reset', bulk_update_assignments_path(classroom: @current_classroom, status: Assignment::NONE), class: 'btn btn-warning btn-warning-brand btn-simple btn-large btn-wide' %>
+    <% end %>
+    <%= link_to 'Pause', bulk_update_assignments_path(classroom: @current_classroom, status: Assignment::INACTIVE), class: 'btn btn-info btn-simple btn-large btn-wide' %>
   </div>
 </div>
 
@@ -184,5 +158,9 @@
     });
 
     initDropdownSelect(<%= @classroom_hash.to_json.html_safe %>);
+    $('.dropdown.select.timeLimit ul > li > a').click(function(){
+      var time_limit = $(this).data('time-limit');
+      $('#bulk_submit #time_limit').val(time_limit);
+    });
   });
 </script>
