#62-#63 :: school index view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,3 +42,4 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .text-main {color:$color-main;}
 
 .centered{text-align:center;}
+.righty{float:right;}
