--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -122,3 +122,5 @@ table.table {width:100%;
 }
 
 #bulk_submit{display:inline;}
+
+table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
