--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,27 +1,55 @@
-<h1>Schools</h1>
+<%= render 'shared/menu' %>
+<div class="container-fluid kmSection">
+  <div class="row kmSectionTitle">
+    <div class="container">
+      <div class="pull-left">
+        <h4>Schools</h4>
+      </div>
+    </div>
+  </div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Classrooms</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container kmSection">
+  <div class="row">
+    <table class="table fit schools">
+      <thead>
+        <tr>
+          <th class="text-center">School</th>
+          <th class="text-center">Classrooms</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @schools.each do |school| %>
-      <tr>
-        <td><%= school.name %></td>
-        <td><%= school.classrooms.count %></td>
-        <td><%= link_to 'Show', school %></td>
-        <td><%= link_to 'Edit', edit_school_path(school) %></td>
-        <td><%= link_to 'Destroy', school, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <tbody>
+        <% @schools.each do |school| %>
+          <tr class="text-center v-middle">
+            <td class="minimal">
+              <span class="text-main font-large">
+                <%= school.name %>
+              </span>
+            </td>
+            <td>
+              <% school.classrooms.each_with_index do |cr, idx| %>
+                <%= link_to cr.name + ((idx != school.classrooms.count - 1) ? ', ' : ''), cr %>
+              <% end %>
+            </td>
+            <td class="minimal"><%= link_to 'View', school, class: 'btn btn-info btn-simple btn-extended' %></td>
+            <% if can? :edit, school %>
+              <td class="minimal"><%= link_to 'Edit', edit_school_path(school), class: 'btn btn-warning btn-simple btn-extended' %></td>
+            <% end %>
+            <% if can? :destroy, school %>
+              <td class="minimal"><%= link_to 'Delete', school, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-simple btn-extended' %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+    <br>
+
+    <%= link_to new_school_path, class: 'btn btn-warning btn-simple btn-large btn-wide righty' do %>
+      <i class="fa fa-plus"></i>
+      <span>Add New School</span>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New School', new_school_path %>
+  </div>
+</div>
